# rust-microgpt

./: CHAT_MODE.md  Cargo.toml  INFERENCE.md  README.md  README_CN.md  chat.sh  infer_novels.py  run_infer.sh  train_novels.sh
src/: chat.rs  main.rs  model.rs  mt19937_rng.rs  tape.rs
